[package]
name = "lunescrab"
readme = "README.md"
edition = "2021"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Lunes Platform <development@lunes.io>"]
keywords = ["cryptocurrency","lunes","blockchain"]
repository = "https://github.com/lunes-platform/lunes-wasm"
description = "Library for communication with nodes in mainnet or testnet of the lunes-blockchain network Allows the automation of sending assets, issue end reissue tokens, leasing, registry, and create new wallet."

[dependencies]
tiny-keccak = { version = "2.0.0", features = ["keccak"] }
wasm-bindgen-test = "0.3.29"
wasm-bindgen = "0.2.78"
blake2 = "0.10.2"
sha2 = "0.10.1"
hex = "0.4.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[profile.release]
opt-level = "s"
lto = true

[lib]
crate-type = ["cdylib", "rlib"]
