[package]
name = "lunesrs"
readme = "README.md"
edition = "2021"
version = "1.9.4"
license = "Apache-2.0"
authors = ["Lunes Platform <development@lunes.io>"]
repository = "https://github.com/lunes-platform/lunesrs"
description = "Library for communication with nodes in mainnet or testnet of the lunes-blockchain network Allows the automation of sending assets, issue end reissue tokens, leasing, registry, and create new wallet."
keywords = ["ed25519-axolotl", "lunes", "cryptography", "cryptocurrencies", "wasm"]
categories = ["algorithms", "cryptography::cryptocurrencies", "cryptography", "wasm"]

[dependencies]
tiny-keccak = { version = "2.0.0", features = ["keccak"] }
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen-test = "0.3.29"
ed25519-axolotl = "1.7.1"
wasm-bindgen = "0.2.78"
blake2 = "0.10.2"
sha2 = "0.10.1"
rand = "0.8.4"
bs58 = "0.4.0"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[profile.release]
opt-level = "s"
lto = true

[lib]
crate-type = ["cdylib", "rlib"]
